# PythonGeo_notebooks

./: ArcGIS_Python.ipynb  BDC.ipynb  CENSUS_7.ipynb  Chapter 10_FAR_TutorialData.ipynb  Chapter 8_datacleaningPython.ipynb  Geospatial in the Cloud.ipynb  Geospatial in the cloud.ipynb  Leafmap_updated_chapter4.ipynb  PythonGeo_notebooks  README.md  STAC_Updated.ipynb  ftp_CensusAPI.ipynb  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: python-package-conda.yml
