[tool.poetry]
name = "pythongeo_notebooks"
version = "0.1.0"
description = ""
authors = ["datamongerbonny <bonny@dataanddonuts.org>"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
